syntax = "proto3";

package orders;

service OrdersService {
    rpc CreateOrder (OrdersDto) returns (OrderResponse) {} 
}

message OrdersDto {
    string symbol = 1;
    int32 leverage = 2;
    int32 quantity = 3;
    string timeframe = 4;
    string type = 5;
    optional int32 ema = 6;
    string user_id = 7;
}

message OrderResponse {
    int32 statusCode = 1;
    string message = 2;
}